--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,10 +57,16 @@ jobs:
           architecture: ${{ matrix.cross_compile && 'x64' || matrix.arch }}
 
       - name: Install dependencies
+        run: make install
+
+      - name: Install PyInstaller
+        shell: bash
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-          pip install pyinstaller
+          if [[ "${{ matrix.platform }}" == "windows" ]]; then
+            .venv/Scripts/python.exe -m pip install pyinstaller
+          else
+            .venv/bin/python -m pip install pyinstaller
+          fi
 
       - name: Build with PyInstaller
         shell: bash
