--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -24,14 +24,17 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-          pip install pyinstaller
-
-      - name: Run tests
+      - name: Install dependencies and run tests
         run: make test
+
+      - name: Install PyInstaller for build test
+        shell: bash
+        run: |
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            .venv/Scripts/python.exe -m pip install pyinstaller
+          else
+            .venv/bin/python -m pip install pyinstaller
+          fi
 
       - name: Test PyInstaller build
         shell: bash
