--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,11 +35,11 @@ updates:
     allow:
       - dependency-type: "direct"
       - dependency-type: "indirect"
-    # Ignore certain dependencies if needed
-    ignore:
-      # Example: ignore major version updates for PIL/Pillow
-      # - dependency-name: "Pillow"
-      #   update-types: ["version-update:semver-major"]
+    # Ignore certain dependencies if needed (uncomment and modify as needed)
+    # ignore:
+    #   - dependency-name: "Pillow"
+    #     update-types: ["version-update:semver-major"]
+
       
   # Monitor GitHub Actions workflows
   - package-ecosystem: "github-actions"
