Add coverage configuration and update documentation
- Introduced a new `.coveragerc` file to configure coverage reporting for the project, excluding test files and build artifacts.
- Updated the `Makefile` to include a new target for running tests with coverage.
- Enhanced the `README.md` to document the new coverage command for users.
- Modified the GitHub Actions workflow to run tests with coverage and upload results to Codecov.

This commit improves test coverage tracking and documentation for better developer experience.

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -24,8 +24,17 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies and run tests
-        run: make test
+      - name: Install dependencies and run tests with coverage
+        run: make coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Install PyInstaller for build test
         shell: bash
