Update README and requirements for AVIF support
- Clarified that AVIF compression requires the `imageio` library in the README.md.
- Updated requirements.txt to specify the minimum version of `imageio` needed for AVIF support.
- Enhanced error handling in compressor.py to log specific import errors for AVIF compression.
- Modified tests to check for AVIF compression support based on the availability of `imageio`.

These changes improve documentation and ensure users are aware of the dependencies required for AVIF image processing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 watchdog>=3.0.0
 Pillow>=10.0.0
 # Optional (for AVIF writing or better PNG):
-# imageio
+imageio>=2.30.0
 # pngquant can be installed separately on Windows and is invoked as an external binary
 pytest>=7.0
 coverage>=7.0
